labs/primer-leocloud/kubernetes/kubernetes.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 7c061bc73631166b0bbafa59f03fc33d1ba7f531
    app.quarkus.io/build-timestamp: 2022-11-07 - 07:28:02 +0000
  labels:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
  name: primer-leocloud
  namespace: student-t-stuetz
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 7c061bc73631166b0bbafa59f03fc33d1ba7f531
    app.quarkus.io/build-timestamp: 2022-11-07 - 07:28:02 +0000
  labels:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
  name: primer-leocloud
  namespace: student-t-stuetz
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: primer-leocloud
      app.kubernetes.io/version: 1.0.0
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 7c061bc73631166b0bbafa59f03fc33d1ba7f531
        app.quarkus.io/build-timestamp: 2022-11-07 - 07:28:02 +0000
      labels:
        app.kubernetes.io/name: primer-leocloud
        app.kubernetes.io/version: 1.0.0
      namespace: student-t-stuetz
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: ghcr.io/htl-leonding/primer-leocloud:1.0.0
          imagePullPolicy: Always
          name: primer-leocloud
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 7c061bc73631166b0bbafa59f03fc33d1ba7f531
    app.quarkus.io/build-timestamp: 2022-11-07 - 07:28:02 +0000
  labels:
    app.kubernetes.io/name: primer-leocloud
    app.kubernetes.io/version: 1.0.0
  name: primer-leocloud
  namespace: student-t-stuetz
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /t.stuetz(/|$)(.*)$
            pathType: Prefix
            backend:
              service:
                name: primer-leocloud
                port:
                  number: 80
#spec:
#  rules:
#    - http:
#        paths:
#          - backend:
#              service:
#                name: primer-leocloud
#                port:
#                  name: http
#            path: /
#            pathType: Prefix
